maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:12: error: illegal start of simple expression
	}
        ^Escaper:16: error: Unmatched closing brace '}' ignored here
}
^